--- a/cadastro-passo-1.html
+++ b/cadastro-passo-1.html
@@ -44,6 +44,7 @@ letter-spacing: 0.02em;
 color: #0B1D2E ;
 
 }
+
 </style>
 <div class="row" >
     <div class="container">
@@ -52,25 +53,26 @@ color: #0B1D2E ;
             <div style="text-align: left; margin-top: 10%; padding-left:5%;">
                 <img src="./assets/logo.svg" alt="" width="80%">
             </div>
-            <div style="color:#11E4C1; line-height: 25px; margin-top: 20%;margin-left: 5%;">
+            <div style="color:#11E4C1; line-height: 20px; margin-top: 20%;margin-left: 5%;">
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-square-fill" fill="#11E4C1" xmlns="http://www.w3.org/2000/svg" style="margin-right:10px">
                             <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/>
                           </svg>
                           Contato
-                         <li>|</li>
-                         <li>|</li>
+                        </li>
+                         <li style="margin-left:5px">|</li>
+                         <li style="margin-left:5px">|</li>
                          
-                    </li>
+                    
                     <li class="nav-item">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-app" fill="#11E4C1" xmlns="http://www.w3.org/2000/svg" style="margin-right:10px">
                             <path fill-rule="evenodd" d="M11 2H5a3 3 0 0 0-3 3v6a3 3 0 0 0 3 3h6a3 3 0 0 0 3-3V5a3 3 0 0 0-3-3zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
                           </svg>
                       Perfil do investidor
-                      <li>|</li>
-                      <li>|</li>
                     </li>
+                    <li style="margin-left:5px">|</li>
+                         <li style="margin-left:5px">|</li>
                     <li class="nav-item">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-app" fill="#11E4C1" xmlns="http://www.w3.org/2000/svg" style="margin-right:10px">
                             <path fill-rule="evenodd" d="M11 2H5a3 3 0 0 0-3 3v6a3 3 0 0 0 3 3h6a3 3 0 0 0 3-3V5a3 3 0 0 0-3-3zM5 1a4 4 0 0 0-4 4v6a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4H5z"/>
