--- a/cadastro-passo-3.html
+++ b/cadastro-passo-3.html
@@ -75,7 +75,7 @@ color: #0B1D2E ;
             <div style="text-align: left; margin-top: 10%; padding-left:5%;">
                 <img src="./assets/logo.svg" alt="" width="80%">
             </div>
-            <div style="color:#11E4C1; line-height: 25px; margin-top: 20%;margin-left: 5%;">
+            <div style="color:#11E4C1; line-height: 20px; margin-top: 20%;margin-left: 5%;">
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-square-fill" fill="#11E4C1" xmlns="http://www.w3.org/2000/svg" style="margin-right:10px">
@@ -83,8 +83,9 @@ color: #0B1D2E ;
                           </svg>
 
                           Contato
-                         <li>|</li>
-                         <li>|</li>
+                         
+                          <li style="margin-left:5px">|</li>
+                          <li style="margin-left:5px">|</li>
                          
                     </li>
                     <li class="nav-item">
@@ -92,8 +93,8 @@ color: #0B1D2E ;
                             <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/>
                           </svg>
                       Perfil do investidor
-                      <li>|</li>
-                      <li>|</li>
+                      <li style="margin-left:5px">|</li>
+                      <li style="margin-left:5px">|</li>
                     </li>
                     <li class="nav-item">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-square-fill" fill="#11E4C1" xmlns="http://www.w3.org/2000/svg" style="margin-right:10px">
